src/styles/css/base.css
* {
    box-sizing: border-box;
}


body {
    font-family: "OpenSans", sans-serif;
    font-size: 16px;
    line-height: 1.6em;
    color: #2A2626;
}


h1, h2, h3, h4, h5, h6 {
    font-family: "Neucha", sans-serif;
    font-weight: 400;
    line-height: 1.2em;
    margin: 0;
    padding: 0;
}

h1 {
    font-size: 72px;
}

h2 {
    font-size: 60px;
}

h3 {
    font-size: 34px;
}

.section {
    max-width: 1110px; /* Выравнивание по центру */
}

.container {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    max-width: 1110px;
    min-height: 880px;
    margin: 0 auto;
    padding: 100px 0;
}

.hello {
    display: block;
  
    color: #fff;
  }
  

.background-img {
  position: relative;
}

.background-img::before {
  position: absolute;
  width: 100%;
  height: 100%;
  content: "";
  background-image: url("../../images/background.png");
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 0.1;
}

